--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-HELP.md
+backend-service/HELP.md
 target/
-!.mvn/wrapper/maven-wrapper.jar
+!backend-service/.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
 
