Creating separate application properties for dev and kubernetes, containerizing tests so postgres containers are created during testing

--- a/backend-service/manifest.yaml
+++ b/backend-service/manifest.yaml
@@ -28,6 +28,8 @@ spec:
                   key: password
             - name: POSTGRES_DB
               value: notes
+            - name: SPRING_PROFILES_ACTIVE
+              value: "prod"
 ---
 apiVersion: apps/v1
 kind: Deployment
