--- a/backend-service/src/main/resources/application.properties
+++ b/backend-service/src/main/resources/application.properties
@@ -1,7 +1,2 @@
-spring.datasource.url=jdbc:postgresql://postgres:5432/notes
-spring.datasource.username=user
-spring.datasource.password=${POSTGRES_PASSWORD}
-spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.format_sql=true
-jakarta.persistence.jdbc.url=jdbc:postgresql://postgres:5432/notes
+spring.application.name=cloud-notes-backend
+logging.level.root=INFO
